--- a/src/down.html
+++ b/src/down.html
@@ -4,6 +4,8 @@
     <title>Технический перерыв</title>
 </head>
 <body>
-    <img src="/images/down.jpg" style="position: absolute; top: 25%;left: 35%"/>
+    <img src="/images/down.jpg" style="position: absolute; top: 25%;left: 35%" alt="Лебединое озеро"/>
+
+<!-- Ничего интересного в исходниках нет -->
 </body>
 </html>
