--- a/src/Assets/Default/UI/HTML/Form/Password.html
+++ b/src/Assets/Default/UI/HTML/Form/Password.html
@@ -1,24 +1,20 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <input class="Pair_<k>Name</k>" id="<k>Name</k>" type="password" name="<k>Name</k>" required="<k>Required</k>" autocomplete="off" autofocus="autofocus" class="span4" value="<k>Value</k>" placeholder="<k>Placeholder</k>" pattern="<k>Regex</k>"/>
+        <input class="Pair_<k>Name</k>" id="<k>Name</k>" type="password" name="<k>Name</k>" <k>Required</k> autocomplete="off" autofocus="autofocus" class="span4" value="" placeholder="<k>Placeholder</k>" pattern="<k>Regex</k>"/>
     </div>
 </div>
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>2"> Повторите пароль:</label>
     <div class="controls">
-        <input class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" required="<k>Required</k>" autocomplete="off" autofocus="autofocus" class="span4" value="" placeholder="Пароли должны совпадать"/>
+        <input class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <k>Required</k> autocomplete="off" autofocus="autofocus" class="span4" value="" placeholder="Пароли должны совпадать"/>
     </div>
 </div>
 <script type="text/javascript">
     $('.Pair_<k>Name</k>').bind('change focus blur keyup', function()
     {
         if ($('#<k>Name</k>').val() != $('#<k>Name</k>2').val())
-        {
-            console.log($('#<k>Name</k>').val()+'-'+$('#<k>Name</k>2').val());
-
             this.setCustomValidity('Пароли не совпадают');
-        }
         else
             this.setCustomValidity('');
     })
