Tons of unstable fixes

--- a/src/Assets/Default/UI/HTML/Button.html
+++ b/src/Assets/Default/UI/HTML/Button.html
@@ -1,1 +1,1 @@
-<a href="<k>Action</k>" class="btn <k>Class</k>" disabled="<k>Disabled</k>"><k>Value</k></a>
+<a href="<k>Action</k>" class="btn <k>Class</k>" <block> disabled="<k>Disabled</k>" </block>><k>Value</k></a>
