--- a/src/Assets/Default/UI/HTML/Form/Password.html
+++ b/src/Assets/Default/UI/HTML/Form/Password.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    $('.Pair_<k>Name</k>').bind('change focus blur keyup keydown', function()
+    $('form').submit(function()
     {
         if ($('#<k>Name</k>').val() != $('#<k>Name</k>2').val())
             this.setCustomValidity('Пароли не совпадают');
