Закрыты многие баги. Добавлены новые.

--- a/src/Assets/Default/UI/HTML/Form/Select.html
+++ b/src/Assets/Default/UI/HTML/Form/Select.html
@@ -1,7 +1,7 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <select multiple name="<k>Name</k>" required="<k>Required</k>" autofocus="autofocus" class="span4" size="<k>Size</k>">
+        <select <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" required="<k>Required</k>" autofocus="autofocus" class="span4" size="<k>Size</k>">
             <k>Value</k>
         </select>
     </div>
