--- a/src/Assets/User/Activation.EMail.html
+++ b/src/Assets/User/Activation.EMail.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Codeine Site</title>
+    <title>Activation</title>
     <meta name="description" content="Codeine Site">
     <meta name="author" content="">
 
@@ -21,7 +21,11 @@
 <body>
 
 <div id="container">
-    <a href="http://nmr.local/activate/user/<k>Code</k>">Щелкните для активации </a>
+    Приветствуем, <k>Fullname</k>!
+
+    Вы успешно зарегистрировались.
+
+    <a href="<k>ActivationURL</k>">Щелкните для активации </a>
 </div>
 
 </body>
