--- a/src/Assets/Default/UI/HTML/Form.html
+++ b/src/Assets/Default/UI/HTML/Form.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row-fluid">
     <div class="span12">
         <form method="post" class="form-horizontal" action="<k>Action</k>" enctype="multipart/form-data">
             <place>Form</place>
