--- a/src/Assets/Default/UI/HTML/Form.html
+++ b/src/Assets/Default/UI/HTML/Form.html
@@ -4,7 +4,7 @@
             <place>Form</place>
 
             <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Отправить</button>
+                <button type="submit" class="btn btn-success">Отправить</button>
                 <button type="reset" class="btn">Отмена</button>
             </div>
         </form>
