--- a/src/Assets/Default/UI/HTML/Form/File.html
+++ b/src/Assets/Default/UI/HTML/Form/File.html
@@ -1,7 +1,7 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <input type="file" name="<k>Name</k>" required="<k>Required</k>" autofocus="autofocus" class="span4" value="<k>Value</k>"
+        <input type="file" name="<k>Name</k>" <block>required="<k>Required</k>"</block> autofocus="autofocus" class="span4" value="<k>Value</k>"
                pattern="<k>Regex</k>" placeholder="<k>Placeholder</k>"/>
     </div>
 </div>
