--- a/src/Assets/Default/UI/HTML/Form/Select.html
+++ b/src/Assets/Default/UI/HTML/Form/Select.html
@@ -2,7 +2,7 @@
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
         <select <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" required="<k>Required</k>" autofocus="autofocus" class="span4" size="<k>Size</k>">
-            <k>Value</k>
+            <k>Options</k>
         </select>
     </div>
 </div>
