--- a/src/Assets/Default/UI/HTML/Form/Nodes.html
+++ b/src/Assets/Default/UI/HTML/Form/Nodes.html
@@ -1,11 +1,12 @@
 <div class="btn-group">
-    <h6>Добавить атрибут</h6>
     <a href="javascript:addNode('Literal.String')" class="btn btn-small"> Строковый</a>
     <a href="javascript:addNode('Numeral.Integer')" class="btn btn-small"> Числовой</a>
     <a href="javascript:addNode('Complex.One2One')" class="btn btn-small"> Связь один-к-одному</a>
     <a href="javascript:addNode('Boolean')" class="btn btn-small"> Логический</a>
     <a href="javascript:addNode('File.Upload')" class="btn btn-small"> Файл</a>
 </div>
+<hr/>
+<h6>Атрибуты</h6>
 
 <div class="control-group">
         <div id="<k>Name</k>" class="container"> &nbsp; </div>
