--- a/src/Assets/IO/Control/Short.html
+++ b/src/Assets/IO/Control/Short.html
@@ -1,12 +1,17 @@
-<div class="alert alert-success">
-    <h3><k>Name</k></h3>
-    <block> <strong>Тип хранилища:</strong> <k>Driver</k> <br/> </block>
-    <block> <strong>Директория:</strong> <k>Directory</k> <br/> </block>
-    <block> <strong>Формат:</strong> <k>Format</k>        <br/> </block>
+<div class="row">
+    <div class="span12">
+        <table class="table table-bordered table-striped">
+            <thead><td><h3><k>Name</k></h3></td></thead>
+            <block> <tr><td>Тип хранилища:</td><td> <k>Driver</k> </td></tr> </block>
+            <block> <tr><td>Директория:</td><td> <k>Directory</k> </td></tr> </block>
+            <block> <tr><td>Формат:</td><td> <k>Format</k>        </td></tr> </block>
 
-    <block> <strong>Сервер:</strong> <k>Server</k>        <br/> </block>
-    <block> <strong>БД:</strong> <k>Database</k>        <br/> </block>
-    <block> <strong>Пользователь:</strong> <k>User</k>        <br/> </block>
-    <block> <strong>Пароль:</strong> <k>Password</k>        <br/> </block>
+            <block> <tr><td>Сервер:</td><td> <k>Server</k>        </td></tr> </block>
+            <block> <tr><td>БД:</td><td> <k>Database</k>        </td></tr> </block>
+            <block> <tr><td>Пользователь:</td><td> <k>User</k>        </td></tr> </block>
+            <block> <tr><td>Пароль:</td><td> <k>Password</k>        </td></tr> </block>
+            <place>Storage_<k>Name</k></place>
+        </table>
 
+    </div>
 </div>
