--- a/src/Assets/Default/UI/HTML/Form/Nodes/Literal/String.html
+++ b/src/Assets/Default/UI/HTML/Form/Nodes/Literal/String.html
@@ -12,8 +12,8 @@
     <div class="control-group">
         <label class="control-label" for="Control"> Элемент управления</label>
         <div class="controls">
-            <input type="radio" name="Nodes[Control][]" value="Normal" /> Textfield
-            <input type="radio" name="Nodes[Control][]" value="Long" /> Tetxarea
+            <input type="radio" name="Nodes[Control][<k>ID</k>]" value="Normal" /> Textfield
+            <input type="radio" name="Nodes[Control][<k>ID</k>]" value="Long" /> Tetxarea
         </div>
     </div>
 
