--- a/src/Assets/Default/UI/HTML/Form/Nodes/Boolean.html
+++ b/src/Assets/Default/UI/HTML/Form/Nodes/Boolean.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 
-    <input id="Type" type="hidden" name="Nodes[Type][]" value="Literal.String">
+    <input id="Type" type="hidden" name="Nodes[Type][]" value="Boolean">
 
     <div class="control-group">
         <label class="control-label" for="Type"> Обязательное?</label>
