--- a/src/Assets/Default/UI/HTML/Form/Menu.html
+++ b/src/Assets/Default/UI/HTML/Form/Menu.html
@@ -1,7 +1,7 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <select id="<k>ID</k>" name="<k>Name</k>" required="<k>Required</k>" autofocus="autofocus" class="span4" size="1">
+        <select id="<k>ID</k>" name="<k>Name</k>" required="<k>Required</k>" class="span4" size="1">
             <k>Options</k>
         </select>
     </div>
