--- a/src/Assets/Default/UI/HTML/Form/Datepicker.html
+++ b/src/Assets/Default/UI/HTML/Form/Datepicker.html
@@ -5,15 +5,15 @@
     <label class="control-label" for="<k>Name</k>"><l><k>Entity</k>.<k>Name</k></l></label>
 
     <div class="controls">
-       <div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
-          <input class="span2 datepicker" size="16" type="text" value="12-02-2012">
+       <div class="input-append date">
+          <input name="<k>Name</k>" class="span2 datepicker" size="16" type="text" value="<k>Value</k>" id="<k>Name</k>">
           <span class="add-on"><i class="icon-th"></i></span>
         </div>
     </div>
 </div>
 
 <jsrun>
-    $(function(){
-        $('.datapicker').datepicker();
+    $(document).ready(function(){
+        $('.datepicker').datepicker({format:'dd.mm.yyyy'});
     });
 </jsrun>
