Fixed date parslet Fixes entity

--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -2,19 +2,18 @@
     <h2>Центр управления</h2>
     <h3><l>Control.<call>Bundle</call></l></h3>
 </div>
-<div class="row">
+<div class="row-fluid">
     <div class="span2">
         <div class="well">
             <place>Navigation</place>
         </div>
     </div>
-    <div class="span9">
-        <div class="btn-group">
-            <place>Sidebar</place>
+    <div class="span10">
+        <div class="well">
+            <div class="btn-group">
+                <place>Sidebar</place>
+            </div>
         </div>
-        <div> &nbsp;</div>
-        <div class="container">
-            <place>Content</place>
-        </div>
+        <place>Content</place>
     </div>
 </div>
