Я зомби и не хочу писать коммит месседж

--- a/src/Assets/Default/UI/HTML/Form/Radio.html
+++ b/src/Assets/Default/UI/HTML/Form/Radio.html
@@ -1,1 +1,4 @@
-<input type="radio" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>" required="<k>Required</k>"> <l><k>Entity</k>.<k>Name</k>.<k>Value</k></l>
+<label class="radio">
+    <input type="radio" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>">
+    <l><k>Entity</k>.<k>Name</k>.<k>Value</k></l>
+</label>
