--- a/src/Assets/IO/Control/Short.html
+++ b/src/Assets/IO/Control/Short.html
@@ -1,16 +1,17 @@
 <div class="row">
     <div class="span12">
-        <table class="table table-bordered table-striped">
-            <thead><td><h3><k>Name</k></h3></td></thead>
-            <block> <tr><td>Тип хранилища:</td><td> <k>Driver</k> </td></tr> </block>
-            <block> <tr><td>Директория:</td><td> <k>Directory</k> </td></tr> </block>
-            <block> <tr><td>Формат:</td><td> <k>Format</k>        </td></tr> </block>
+        <h3 class="page-header" data-toggle="collapse" data-target="#Storage<k>Name</k>"><k>Name</k></h3>
+        <div class="collapse in" id="Storage<k>Name</k>">
+            <table class="table table-bordered table-striped">
+                <block> <tr><td class="span4">Тип хранилища:</td><td class="span8"> <k>Driver</k> </td></tr> </block>
+                <block> <tr><td>Директория:</td><td> <k>Directory</k> </td></tr> </block>
+                <block> <tr><td>Формат:</td><td> <k>Format</k>        </td></tr> </block>
 
-            <block> <tr><td>Сервер:</td><td> <k>Server</k>        </td></tr> </block>
-            <block> <tr><td>БД:</td><td> <k>Database</k>        </td></tr> </block>
-            <block> <tr><td>Пользователь:</td><td> <k>User</k>        </td></tr> </block>
-            <block> <tr><td>Пароль:</td><td> <k>Password</k>        </td></tr> </block>
-        </table>
-
+                <block> <tr><td>Сервер:</td><td> <k>Server</k>        </td></tr> </block>
+                <block> <tr><td>БД:</td><td> <k>Database</k>        </td></tr> </block>
+                <block> <tr><td>Пользователь:</td><td> <k>User</k>        </td></tr> </block>
+                <block> <tr><td>Пароль:</td><td> <k>Password</k>        </td></tr> </block>
+            </table>
+        </div>
     </div>
 </div>
