--- a/src/Assets/Default/UI/HTML/Form/Maskfield.html
+++ b/src/Assets/Default/UI/HTML/Form/Maskfield.html
@@ -6,10 +6,10 @@
     </div>
 </div>
 
-<script type="text/javascript">
-$(document).ready(function()
+<js>jquery.maskedinput</js>
+<jsrun>
+$(function()
 {
     $("#<k>Name</k>").mask("<k>Mask</k>");
 });
-</script>
-<js>jquery.maskedinput</js>
+</jsrun>
