--- a/src/Assets/Default/UI/HTML/Form/Password.html
+++ b/src/Assets/Default/UI/HTML/Form/Password.html
@@ -10,7 +10,7 @@
         <input class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <k>Required</k> autocomplete="off" autofocus="autofocus" class="span4" value="" placeholder="Пароли должны совпадать"/>
     </div>
 </div>
-<script type="text/javascript">
+<jsrun>
     $('form').submit(function()
     {
         if ($('#<k>Name</k>').val() != $('#<k>Name</k>2').val())
@@ -18,4 +18,4 @@
         else
             this.setCustomValidity('');
     })
-</script>
+</jsrun>
