--- a/src/Assets/Default/UI/HTML/Form/TextfieldUnique.html
+++ b/src/Assets/Default/UI/HTML/Form/TextfieldUnique.html
@@ -4,7 +4,7 @@
         <input id="<k>Name</k>" type="<k>Subtype</k>" name="<k>Name</k>" required="<k>Required</k>" autofocus="autofocus" class="span4" value="<k>Value</k>" pattern="<k>Regex</k>" placeholder="<k>Placeholder</k>"/>
     </div>
 </div>
-<script type="text/javascript">
+<jsrun>
     $('#<k>Name</k>').keyup(function()
     {
         var el = $(this);
@@ -26,4 +26,4 @@
             }
             );
     })
-</script>
+</jsrun>
