--- a/src/Assets/Default/UI/HTML/Form/Radio.html
+++ b/src/Assets/Default/UI/HTML/Form/Radio.html
@@ -1,4 +1,4 @@
 <label class="radio">
-    <input type="radio" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>">
+    <input type="radio" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>" <block>checked="<k>Checked</k>"</block>>
     <l><k>Entity</k>.<k>Name</k>.<k>Value</k></l>
 </label>
