--- a/src/Assets/Default/UI/HTML/Form/Password.html
+++ b/src/Assets/Default/UI/HTML/Form/Password.html
@@ -1,13 +1,22 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <input class="Pair_<k>Name</k>" id="<k>Name</k>" type="password" name="<k>Name</k>" <block>required="<k>Required</k>"</block> autocomplete="off" autofocus="autofocus" class="span4" value="" placeholder="<k>Placeholder</k>" pattern="<k>Regex</k>"/>
+        <input class="Pair_<k>Name</k>"
+               id="<k>Name</k>"
+               type="password"
+               name="<k>Name</k>"
+               <block>required="<k>Required</k>"</block>
+                autocomplete="off"
+                class="span4"
+                value=""
+                <block>placeholder="<k>Placeholder</k>"</block>
+                <block>pattern="<k>Regex</k>"</block> />
     </div>
 </div>
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>2"> Повторите пароль:</label>
     <div class="controls">
-        <input class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <block>required="<k>Required</k>"</block> autocomplete="off" autofocus="autofocus" class="span4" value="" placeholder="Пароли должны совпадать"/>
+        <input class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <block>required="<k>Required</k>"</block> autocomplete="off" class="span4" value="" placeholder="Пароли должны совпадать"/>
     </div>
 </div>
 <jsrun>
