--- a/src/Assets/Default/UI/HTML/Form/Textfield.html
+++ b/src/Assets/Default/UI/HTML/Form/Textfield.html
@@ -1,7 +1,12 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <input type="<k>Subtype</k>" name="<k>Name</k>" <block>required="<k>Required</k>"</block> autofocus="autofocus" class="span4" value="<k>Value</k>"
-               pattern="<k>Regex</k>" placeholder="<k>Placeholder</k>"/>
+        <input type="<k>Subtype</k>"
+               name="<k>Name</k>"
+               <block>required="<k>Required</k>"</block>
+                class="span4"
+               value="<k>Value</k>"
+               <block>pattern="<k>Regex</k>"</block>
+               <block>placeholder="<k>Placeholder</k>"</block> />
     </div>
 </div>
