--- a/src/Assets/Default/UI/HTML/Form/Stars.html
+++ b/src/Assets/Default/UI/HTML/Form/Stars.html
@@ -4,7 +4,7 @@
 
 <div id="<k>Name</k>" class="stars">
 <div class="control-group">
-    <label class="control-label"> <l><k>Entity</k>.<call>Data.Type</call>.<k>Name</k>.Label</l> </label>
+    <label class="control-label"> <l><k>Entity</k>.<call>Element.Type</call>.<k>Name</k>.Label</l> </label>
     <div class="controls">
         <k>Stars</k>
     </div> <div id="startext_<k>Name</k>" class="stars-text">&nbsp;</div>
