--- a/src/Assets/Default/UI/HTML/Form/Datepicker.html
+++ b/src/Assets/Default/UI/HTML/Form/Datepicker.html
@@ -6,7 +6,8 @@
 
     <div class="controls">
        <div class="input-append date">
-          <input name="<k>Name</k>" class="span2 datepicker" size="16" type="text" value="<datetime format="d.m.Y"><k>Value</k></datetime>" id="<k>Name</k>">
+          <input id="<k>Name</k>"
+                 name="<k>Name</k>" class="datepicker" size="16" type="text" value="<datetime format="d.m.Y"><k>Value</k></datetime>" id="<k>Name</k>">
           <span class="add-on"><i class="icon-th"></i></span>
         </div>
     </div>
