--- a/src/Assets/IO/Control/Short.html
+++ b/src/Assets/IO/Control/Short.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row-fluid">
     <div class="span12">
-        <h3 class="page-header" data-toggle="collapse" data-target="#Storage<k>Name</k>"><k>Name</k></h3>
+        <h4 class="page-header" data-toggle="collapse" data-target="#Storage<k>Name</k>"><k>Name</k></h4>
         <div class="collapse in" id="Storage<k>Name</k>">
             <table class="table table-bordered table-striped">
                 <block> <tr><td class="span4">Тип хранилища:</td><td class="span8"> <k>Driver</k> </td></tr> </block>
