--- a/src/Assets/Default/UI/HTML/Form/WYSIWYG.html
+++ b/src/Assets/Default/UI/HTML/Form/WYSIWYG.html
@@ -4,7 +4,9 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <textarea id="<k>Name</k>" class="wysiwyg span4" name="<k>Name</k>"> <k>Value</k></textarea>
+        <textarea id="<k>Name</k>" class="wysiwyg span4" name="<k>Name</k>">
+            <k>Value</k>
+        </textarea>
     </div>
 </div>
 <jsrun>
