New control panel type. Various fixes

--- a/src/Assets/Default/UI/HTML/Navlist.html
+++ b/src/Assets/Default/UI/HTML/Navlist.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-list">
-          <li class="nav-header">
-            Пакеты
-          </li>
+  <li class="nav-header">
+    <k>Header</k>
+  </li>
 <k>Value</k>
 </ul>
