--- a/src/Assets/Default/UI/HTML/Form/TextfieldUnique.html
+++ b/src/Assets/Default/UI/HTML/Form/TextfieldUnique.html
@@ -1,7 +1,12 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <input id="<k>Name</k>" type="<k>Subtype</k>" name="<k>Name</k>" <block>required="<k>Required</k>"</block> class="span4" value="<k>Value</k>" <block>pattern="<k>Regex</k>"</block> placeholder="<k>Placeholder</k>"/>
+        <input id="<k>Name</k>" type="<k>Subtype</k>" name="<k>Name</k>" class="span4"
+        <block>required="<k>Required</k>"</block>
+        <block>placeholder="<k>Placeholder</k>"</block>
+        <block>pattern="<k>Regex</k>"</block>
+        value="<k>Value</k>"
+        />
     </div>
 </div>
 <jsrun>
@@ -21,7 +26,7 @@
                 },
                 success: function (data)
                 {
-                     eld.setCustomValidity("");
+                     eld.setCustomValidity(data);
                 }
             }
             );
