--- a/src/Assets/Default/UI/HTML/Form/Datepicker.html
+++ b/src/Assets/Default/UI/HTML/Form/Datepicker.html
@@ -7,7 +7,7 @@
     <div class="controls">
        <div class="input-append date">
           <input id="<k>Name</k>"
-                 name="<k>Name</k>" class="datepicker" size="16" type="text" value="<datetime format="d.m.Y"><k>Value</k></datetime>" id="<k>Name</k>">
+                 name="<k>Name</k>" class="datepicker" size="16" type="text" value="<k>Value</k>" id="<k>Name</k>">
           <span class="add-on"><i class="icon-th"></i></span>
         </div>
     </div>
