--- a/src/Assets/Default/UI/Thumbs/Photo.html
+++ b/src/Assets/Default/UI/Thumbs/Photo.html
@@ -1,1 +1,1 @@
-<img class="photo thumbnail avatar" width="<k>Width</k>" height="<k>Height</k>" src="<k>URL</k>" alt="<k>Alt</k>"/>
+<img class="thumbnail" width="<k>Width</k>" height="<k>Height</k>" src="<k>URL</k>" alt="<k>Alt</k>"/>
