--- a/src/Assets/Default/UI/HTML/Form/Star.html
+++ b/src/Assets/Default/UI/HTML/Form/Star.html
@@ -1,1 +1,1 @@
-<input name="<k>Name</k>" type="radio" class="star" value="<k>Num</k>" title="<l><k>Entity</k>.<call>Data.Type</call>.<k>Name</k>.1</l>"  <block>checked="<k>Checked</k>"</block> required="required"/>
+<input name="<k>Name</k>" type="radio" class="star" value="<k>Num</k>" title="<l><k>Entity</k>.<call>Data.Type</call>.<k>Name</k>.<k>Num</k></l>"  <block>checked="<k>Checked</k>"</block> required="required"/>
