--- a/src/Assets/Default/UI/HTML/Form/Checkbox.html
+++ b/src/Assets/Default/UI/HTML/Form/Checkbox.html
@@ -1,6 +1,6 @@
  <div class="control-group">
-      <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> </label>
-      <div class="controls">
-        <input type="checkbox" name="<k>Name</k>" />
-      </div>
-    </div>
+  <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> </label>
+  <div class="controls">
+    <input type="checkbox" name="<k>Name</k>" value="<k>Value</k>"/>
+  </div>
+</div>
