--- a/src/Assets/Default/UI/HTML/Form/File.html
+++ b/src/Assets/Default/UI/HTML/Form/File.html
@@ -6,5 +6,7 @@
             class="span4"
             <block>pattern="<k>Regex</k>"</block>
             <block>placeholder="<k>Placeholder</k>"</block> />
+        <block>Максимальный размер: <k>MaxSize</k></block>
+        <block><br/>Разрешённые типы: <k>TypeHint</k></block>
     </div>
 </div>
