--- a/src/Assets/Errors/403.html
+++ b/src/Assets/Errors/403.html
@@ -10,8 +10,9 @@
           <h1 class="page-header">Ой!</h1>
 
           <h2 class="page-header">Что случилось?</h2>
-          У вас нет доступа к этой странице.<br/>
-          <block>Причина: <k>Rule.Message</k></block>
+          <h3>У вас нет доступа к этой странице.</h3>
+          <hr/>
+          <block><div class="alert">Причина: <k>Message</k></div></block>
 
           <h2 class="page-header">Что делать?</h2>
           Можно попробовать начать с <a href="/">главной</a>.
