--- a/src/Assets/Default/UI/HTML/Form/Password/Two.html
+++ b/src/Assets/Default/UI/HTML/Form/Password/Two.html
@@ -16,6 +16,7 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>2"> Повторите пароль:</label>
     <div class="controls">
-        <input class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <block>required="<k>Required</k>"</block> autocomplete="off" class="span4" value="" placeholder="Пароли должны совпадать"/>
+        <input data-equals="<k>Name</k>" class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <block>required="<k>Required</k>"</block> autocomplete="off" class="span4" value="" placeholder="Пароли должны совпадать"/>
     </div>
 </div>
+<js>jquery.tools:equals</js>
