--- a/src/Assets/Default/UI/HTML/Form/TextfieldUnique.html
+++ b/src/Assets/Default/UI/HTML/Form/TextfieldUnique.html
@@ -1,7 +1,7 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <input data-unique="<k>Name</k>" id="<k>Name</k>" type="<k>Subtype</k>" name="<k>Name</k>" class="span4"
+        <input data-value="<k>Value</k>" data-unique="<k>Name</k>" id="<k>Name</k>" type="<k>Subtype</k>" name="<k>Name</k>" class="span4"
         <block>required="<k>Required</k>"</block>
         <block>placeholder="<k>Placeholder</k>"</block>
         <block>pattern="<k>Regex</k>"</block>
