--- a/src/Assets/Default/UI/HTML/Form/Maskfield.html
+++ b/src/Assets/Default/UI/HTML/Form/Maskfield.html
@@ -2,7 +2,9 @@
     <label class="control-label"><l><k>Entity</k>.<k>Name</k></l></label>
 
     <div class="controls">
-        <input type="text" class="span4" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>" <block>required="<k>Required</k>"</block>>
+        <if value="<k>Prefix</k>" eq="+7"> <div class="input-prepend"> </if>
+        <block><span class="add-on"><k>Prefix</k></span></block><input type="text" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>" <block>required="<k>Required</k>"</block>>
+        <if value="<k>Prefix</k>" eq="+7"> </div> </if>
     </div>
 </div>
 
