--- a/src/Assets/Default/UI/HTML/Form/WYSIWYG.html
+++ b/src/Assets/Default/UI/HTML/Form/WYSIWYG.html
@@ -4,7 +4,7 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <textarea id="<k>Name</k>" class="wysiwyg span12" name="<k>Name</k>">
+        <textarea id="<k>Name</k>" class="wysiwyg span12" name="<k>Name</k>" <block>required="<k>Required</k>"</block>>
             <k>Value</k>
         </textarea>
     </div>
