--- a/src/Assets/Default/UI/HTML/Form.html
+++ b/src/Assets/Default/UI/HTML/Form.html
@@ -4,6 +4,7 @@
             <place>Form</place>
 
             <div class="form-actions">
+                <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
                 <button type="submit" class="btn btn-success">Отправить</button>
                 <button type="reset" class="btn">Отмена</button>
             </div>
