--- a/src/Assets/Default/UI/HTML/Form/Password/Two.html
+++ b/src/Assets/Default/UI/HTML/Form/Password/Two.html
@@ -4,6 +4,7 @@
         <input class="Pair_<k>Name</k>"
                id="<k>Name</k>"
                type="password"
+               data-minlength="4"
                name="<k>Name</k>"
                <block>required="<k>Required</k>"</block>
                 autocomplete="off"
@@ -20,3 +21,4 @@
     </div>
 </div>
 <js>jquery.tools:equals</js>
+<js>jquery.tools:minlen</js>
