--- a/src/Assets/Default/UI/HTML/Paginator/Next.html
+++ b/src/Assets/Default/UI/HTML/Paginator/Next.html
@@ -1,1 +1,1 @@
-<li><a href="<k>URL</k><k>Num</k>" rel="next"> → </a></li>
+<li><a href="<k>URL</k><k>Num</k><k>PageURLPostfix</k>" rel="next"> → </a></li>
