Password element fix

--- a/src/Assets/Default/UI/HTML/Form/Password/One.html
+++ b/src/Assets/Default/UI/HTML/Form/Password/One.html
@@ -1,13 +1,11 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
     <div class="controls">
-        <input class="span4"
-               id="<k>Name</k>"
+        <input id="<k>Name</k>"
                type="password"
                name="<k>Name</k>"
                <block>required="<k>Required</k>"</block>
                 autocomplete="off"
-                class="span4"
                 value=""
                 <block>placeholder="<k>Placeholder</k>"</block>
                 <block>pattern="<k>Regex</k>"</block> />
