--- a/src/Assets/Default/UI/HTML/Form/Password/Two.html
+++ b/src/Assets/Default/UI/HTML/Form/Password/Two.html
@@ -8,7 +8,6 @@
                name="<k>Name</k>"
                <block>required="<k>Required</k>"</block>
                 autocomplete="off"
-                class="span4"
                 value=""
                 <block>placeholder="<k>Placeholder</k>"</block>
                 <block>pattern="<k>Regex</k>"</block> />
@@ -17,7 +16,7 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>2"> Повторите пароль:</label>
     <div class="controls">
-        <input data-equals="<k>Name</k>" class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <block>required="<k>Required</k>"</block> autocomplete="off" class="span4" value="" placeholder="Пароли должны совпадать"/>
+        <input data-equals="<k>Name</k>" class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <block>required="<k>Required</k>"</block> autocomplete="off" value="" placeholder="Пароли должны совпадать"/>
     </div>
 </div>
 <js>jquery.tools:equals</js>
