--- a/src/Assets/Default/Main.html
+++ b/src/Assets/Default/Main.html
@@ -16,15 +16,21 @@
 
     <link rel="index" href="/" />
 
+    <css>bootstrap</css>
+    <css>bootstrap:responsive</css>
+
+    <js>bootstrap</js>
+
+    <place>CSS</place>
 </head>
 
 <body>
 
 <div id="container">
-    <div id="content" role="main">
+    <div id="content" role="main" class="container">
         <place>Content</place>
     </div>
 </div>
-
+<place>JS</place>
 </body>
 </html>
