--- a/src/Assets/Code/Documentation/Method.html
+++ b/src/Assets/Code/Documentation/Method.html
@@ -1,5 +1,5 @@
 <css>Code/Documentation:ByContract</css>
-<h1 class="page-header"><k>Service</k></h1>
+<h1 class="page-header"><call>Doc.Service</call>:<call>Doc.Method</call></h1>
 
 <div class="block">
     <div class="pull-right">
@@ -7,6 +7,12 @@
     </div>
     <h3>Описание</h3>
     <k>Description.ru_RU</k>
+
+    <h3>Wiki</h3>
+    <block>
+        <wiki><k>Wiki</k></wiki>
+
+    </block>
 </div>
 
 <div class="block">
@@ -26,23 +32,19 @@
 
 <div class="block">
     <h3>Возвращаемое значение</h3>
-    <div class="row-fluid">
-        <div class="span4">
-            <h6>Тип</h6>
-            <l>Data.Type.<k>Result.Type</k></l>
-        </div>
-        <div class="span4">
-            <h6>Размер</h6>
-            <k>Result.Size</k>
-        </div>
-    </div>
+    <h6>Тип</h6>
+    <l>Data.Type.<k>Result.Type</k></l>
+    <block>
+        <h6>Размер</h6>
+        <k>Result.Size</k>
+    </block>
+    <h6>Описание</h6>
+    <k>Result.Description.ru_RU</k>
 </div>
 
 <hr/>
 
 <div class="block">
     <h3>Пример использования</h3>
-<pre>
-    <k>Code</k>
-</pre>
+<block><k>Code</k></block>
 </div>
