--- a/src/Assets/Default/UI/HTML/Form/Select.html
+++ b/src/Assets/Default/UI/HTML/Form/Select.html
@@ -1,7 +1,7 @@
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
+    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l>:</label>
     <div class="controls">
-        <select <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" required="<k>Required</k>" autofocus="autofocus" class="span4" size="<k>Size</k>">
+        <select <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> class="span4" size="<k>Size</k>">
             <k>Options</k>
         </select>
     </div>
