--- a/src/Assets/Default/UI/HTML/Form/Textarea.html
+++ b/src/Assets/Default/UI/HTML/Form/Textarea.html
@@ -1,6 +1,6 @@
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
+    <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>ID</k></l> :</label>
     <div class="controls">
-        <textarea name="<k>Name</k>"><k>Value</k></textarea>
+        <textarea <block>required="<k>Required</k>"</block> class="span4" name="<k>Name</k>"><k>Value</k></textarea>
     </div>
 </div>
