--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -17,7 +17,7 @@
     <div class="control-group">
         <label class="control-label" for="TTL">Запомнить на неделю</label>
         <div class="controls">
-            <input type="checkbox" name="TTL" id="TTL" value="Long">
+            <input type="checkbox" name="Remember" id="TTL" value="Long">
         </div>
     </div>
     <div class="form-actions">
