--- a/src/Assets/Default/UI/HTML/Form/Stars.html
+++ b/src/Assets/Default/UI/HTML/Form/Stars.html
@@ -2,12 +2,11 @@
 <js>jquery.star:MetaData</js>
 <js>jquery.star</js>
 
-<div id="<k>Name</k>" class="stars">
 <div class="control-group">
-    <label class="control-label"> <l><k>Entity</k>.<call>Data.Type</call>.<k>Name</k>.Label</l> </label>
+    <label class="control-label"> <l><k>Entity</k>.<k>Node</k>.Label</l> </label>
     <div class="controls">
+<div id="<k>Name</k>" class="stars">
         <k>Stars</k>
+    </div>
     </div> <div id="startext_<k>Name</k>" class="stars-text">&nbsp;</div>
-
-</div>
 </div>
