User activation now bundled. Autologin support

--- a/src/Assets/User/Activation/EMail.html
+++ b/src/Assets/User/Activation/EMail.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <title>Activation</title>
-    <meta name="description" content="Codeine Site">
+    <meta name="description" content="<call>Project.Description</call>">
     <meta name="author" content="">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -21,11 +21,11 @@
 <body>
 
 <div id="container">
-    Приветствуем, <k>Fullname</k>!
+    Приветствуем, <k>Fullname</k>! <br/>
 
-    Вы успешно зарегистрировались.
+    Вы успешно зарегистрировались в проекте <call>Project.Title</call>.<br/>
 
-    <a href="<k>ActivationURL</k>">Щелкните для активации </a>
+    <a target="_blank" href="<k>ActivationURL</k>">Щелкните для активации</a> или скопируйте эту ссылку в окно браузера: http://<k>ActivationURL</k>
 </div>
 
 </body>
