--- a/src/Assets/User/Show/Cabinet.html
+++ b/src/Assets/User/Show/Cabinet.html
@@ -1,13 +1,9 @@
-    <div class="pull-left">
-        <thumb>
-            <URL>Public/uploads/photos/<k>Photo</k></URL>
-            <Width>35</Width>
-            <Template>Photo</Template>
-            <Alt><k>Fullname</k></Alt>
-        </thumb>
-    </div>
-    <div id="cabinet_user">
-        <h3><a href="/user/<k>ID</k>"><strong><k>Fullname</k></strong></a></h3>
-        <a href="/profile">Профиль</a>
-        <a href="/logout">Выход</a>
-    </div>
+<ul class="nav pull-right">
+    <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><k>EMail</k><b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="/profile">Профиль</a></li>
+          <li><a href="/logout">Выход</a></li>
+        </ul>
+    </li>
+</ul>
