--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -2,20 +2,20 @@
     <div class="control-group">
         <label class="control-label" for="EMail">E-mail:</label>
         <div class="controls">
-            <input class="span4" id="EMail" type="text" name="EMail" value="" placeholder="example@example.com" required="required"
+            <input class="span6" id="EMail" type="text" name="EMail" value="" placeholder="example@example.com" required="required"
                    autofocus="autofocus"/>
         </div>
     </div>
     <div class="control-group">
         <label class="control-label" for="Password">Пароль:</label>
         <div class="controls">
-            <input class="span4" id="Password" type="password" name="Password" value="" placeholder="Пароль" required="required"
+            <input class="span6" id="Password" type="password" name="Password" value="" placeholder="Пароль" required="required"
                    autofocus="autofocus"/>
             <a class="forgot" href="/forgot">Забыли пароль?</a>
         </div>
     </div>
     <div class="control-group">
-        <label class="control-label" for="TTL">Запомнить на неделю</label>
+        <label class="control-label" for="TTL">Запомнить:</label>
         <div class="controls">
             <input type="checkbox" name="Remember" id="TTL" value="Long">
         </div>
