--- a/src/Assets/Default/UI/HTML/Form/Checkbox.html
+++ b/src/Assets/Default/UI/HTML/Form/Checkbox.html
@@ -1,5 +1,5 @@
  <div class="control-group">
-  <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> </label>
+  <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> </label>
   <div class="controls">
     <input type="checkbox" name="<k>Name</k>" value="<k>TrueValue</k>" <block>checked="<k>Checked</k>"</block>/>
   </div>
