--- a/src/down.html
+++ b/src/down.html
@@ -4,7 +4,7 @@
     <title>Технический перерыв</title>
 </head>
 <body>
-    <img src="/down.jpg" style="position: absolute; top: 25%;left: 35%" alt="Лебединое озеро"/>
+    <img src="http://one2team.ru/img/down.jpg" style="position: absolute; top: 25%;left: 35%" alt="Лебединое озеро"/>
 
 <!-- Ничего интересного в исходниках нет -->
 </body>
