New control panel i18n.

--- a/src/Assets/Control/UI/HTML/Navlist/Active.html
+++ b/src/Assets/Control/UI/HTML/Navlist/Active.html
@@ -1,5 +1,6 @@
 <li class="active">
-    <a href="<k>URL</k>">
-        <img src="/img/icons/Control/<k>ID</k>.png" width="16" height="16" class="icon"/>
-        <k>Title</k></a>
+    <a href="/control/<k>ID</k>">
+    <img src="/img/icons/Control/<k>ID</k>.png" width="16" height="16" class="icon"/>
+        <l>Control.<k>Group</k>.<k>ID</k></l>
+    </a>
 </li>
