--- a/src/Assets/Control/UI/HTML/Navlist/Passive.html
+++ b/src/Assets/Control/UI/HTML/Navlist/Passive.html
@@ -1,6 +1,6 @@
 <li>
-    <a href="<k>URL</k>">
+    <a href="/control/<k>ID</k>">
     <img src="/img/icons/Control/<k>ID</k>.png" width="16" height="16" class="icon"/>
-        <k>Title</k>
+        <l>Control.<k>Group</k>.<k>ID</k></l>
     </a>
 </li>
