--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -1,6 +1,6 @@
 <div class="page-header">
     <h2>Центр управления</h2>
-    <h3><l>Control.<call>Bundle</call></l></h3>
+    <h3><l>Control.<call>Group</call>.<call>Bundle</call></l></h3>
 </div>
 <div class="row-fluid">
     <div class="span3">
