Multiple fixes. Details in next commit digest.

--- a/src/Assets/Default/Main.html
+++ b/src/Assets/Default/Main.html
@@ -18,9 +18,13 @@
 
     <css>bootstrap</css>
     <css>bootstrap:responsive</css>
+    <css>Default</css>
 
     <js>jquery:min</js>
     <js>bootstrap</js>
+
+    <js>Locale:live</js>
+
     <place>CSS</place>
 </head>
 
