Упрощение путей к шаблонам ui-элементов. Было: /Default/UI/HTML/*.html Стало: /Default/UI/*.html

--- a/src/Assets/Default/UI/Form/Datepicker.html
+++ b/src/Assets/Default/UI/Form/Datepicker.html
@@ -2,7 +2,7 @@
 <css>bootstrap-datepicker</css>
 
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"><l><k>Entity</k>.<k>Name</k></l></label>
+    <label class="control-label" for="<k>Name</k>"><l><k>Label</k></l></label>
 
     <div class="controls">
        <div class="input-append date">
