--- a/src/Assets/Default/UI/Form/Maskfield.html
+++ b/src/Assets/Default/UI/Form/Maskfield.html
@@ -1,5 +1,5 @@
 <div class="control-group">
-    <label class="control-label"><l><k>Entity</k>.<k>Name</k></l></label>
+    <label class="control-label"><l><k>Label</k></l></label>
 
     <div class="controls">
         <if value="<k>Prefix</k>" eq="+7"> <div class="input-prepend"> </if>
