--- a/src/Assets/Default/UI/Form/WYSIWYG.html
+++ b/src/Assets/Default/UI/Form/WYSIWYG.html
@@ -2,7 +2,7 @@
 <css>bootstrap-wysihtml5</css>
 <js>bootstrap-wysihtml5</js>
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
+    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
     <div class="controls">
         <textarea id="<k>Name</k>" class="wysiwyg span12" name="<k>Name</k>" <block>required="<k>Required</k>"</block>>
             <k>Value</k>
