--- a/src/Assets/Default/UI/Form/File.html
+++ b/src/Assets/Default/UI/Form/File.html
@@ -1,5 +1,5 @@
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
+    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
     <div class="controls">
         <input type="file" name="<k>Name</k>"
             <block>required="<k>Required</k>"</block>
