--- a/src/Assets/Default/UI/Form/Menu.html
+++ b/src/Assets/Default/UI/Form/Menu.html
@@ -1,5 +1,5 @@
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
+    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
     <div class="controls">
         <select id="<k>ID</k>" name="<k>Name</k>" required="<k>Required</k>" class="span4" size="1">
             <k>Options</k>
