--- a/src/Assets/Default/UI/Form/Password/Two.html
+++ b/src/Assets/Default/UI/Form/Password/Two.html
@@ -1,5 +1,5 @@
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
+    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
     <div class="controls">
         <input class="Pair_<k>Name</k>"
                id="<k>Name</k>"
