--- a/src/Assets/Default/UI/Form/Speech.html
+++ b/src/Assets/Default/UI/Form/Speech.html
@@ -1,5 +1,5 @@
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
+    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
     <div class="controls">
         <input x-webkit-speech type="<k>Subtype</k>"
                name="<k>Name</k>"
