--- a/src/Assets/Default/UI/Form/TextfieldUnique.html
+++ b/src/Assets/Default/UI/Form/TextfieldUnique.html
@@ -1,5 +1,5 @@
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Entity</k>.<k>Name</k></l> :</label>
+    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
     <div class="controls">
         <input data-value="<k>Value</k>" data-unique="<k>Name</k>" id="<k>Name</k>" type="<k>Subtype</k>" name="<k>Name</k>" class="span4"
         <block>required="<k>Required</k>"</block>
