Улучшенный центр управления.

--- a/src/Assets/IO/Control/Short.html
+++ b/src/Assets/IO/Control/Short.html
@@ -1,17 +1,7 @@
-<div class="row-fluid">
-    <div class="span12">
-        <h4 class="page-header" data-toggle="collapse" data-target="#Storage<k>Name</k>"><k>Name</k></h4>
-        <div class="collapse in" id="Storage<k>Name</k>">
-            <table class="table table-bordered table-striped">
-                <block> <tr><td class="span4">Тип хранилища:</td><td class="span8"> <k>Driver</k> </td></tr> </block>
-                <block> <tr><td>Директория:</td><td> <k>Directory</k> </td></tr> </block>
-                <block> <tr><td>Формат:</td><td> <k>Format</k>        </td></tr> </block>
-
-                <block> <tr><td>Сервер:</td><td> <k>Server</k>        </td></tr> </block>
-                <block> <tr><td>БД:</td><td> <k>Database</k>        </td></tr> </block>
-                <block> <tr><td>Пользователь:</td><td> <k>User</k>        </td></tr> </block>
-                <block> <tr><td>Пароль:</td><td> <k>Password</k>        </td></tr> </block>
-            </table>
-        </div>
-    </div>
-</div>
+<tr>
+    <td><k>Name</k></td>
+    <td><k>Driver</k></td>
+    <td><k>Server</k></td>
+    <td><k>Directory</k></td>
+    <td><img src="/img/icons/Control/IO/Status/<k>Status</k>.png" width="16" height="16"/></td>
+</tr>
