--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -1,19 +1,13 @@
 <div class="page-header">
     <h2>Центр управления</h2>
-    <h3><l>Control.<call>Group</call>.<call>Bundle</call></l></h3>
 </div>
 <div class="row-fluid">
     <div class="span3">
-        <div class="well">
-            <place>Navigation</place>
-        </div>
+        <place>Navigation</place>
     </div>
     <div class="span9">
-        <div class="well">
-            <div class="btn-group">
-                <place>Sidebar</place>
-            </div>
-        </div>
+        <h2 class="page-header"><l><call>Bundle</call>:Control.Title</l></h2>
+        <place>Sidebar</place>
         <place>Content</place>
     </div>
 </div>
