Многочисленные исправления и оптимизации.

--- a/src/Assets/User/Activation/EMail.html
+++ b/src/Assets/User/Activation/EMail.html
@@ -21,11 +21,14 @@
 <body>
 
 <div id="container">
-    Приветствуем, <k>Fullname</k>! <br/>
+    <img src="http://leasingpad.local/img/logo-Production.png" style="float: right;"/>
+    <h2>Приветствуем, <k>Fullname</k>!</h2>
 
-    Вы успешно зарегистрировались в проекте <call>Project.Title</call>.<br/>
+    <p>Вы успешно зарегистрировались в проекте <strong><a href="<k>Host</k>"><k>Project.Title</k></a></strong>.</p>
 
-    <a target="_blank" href="<k>ActivationURL</k>">Щелкните для активации</a> или скопируйте эту ссылку в окно браузера: http://<k>ActivationURL</k>
+    <div style="margin-bottom: 4px;"><a target="_blank" href="<k>ActivationURL</k>">Щелкните для активации</a></div>
+    <strong>или</strong>
+    <div style="margin-top: 4px;">Скопируйте эту ссылку в окно браузера: http://<k>ActivationURL</k></div>
 </div>
 
 </body>
