--- a/src/Assets/User/Activation/Success.html
+++ b/src/Assets/User/Activation/Success.html
@@ -1,11 +1,14 @@
+<css>User:Cabinet</css>
 <div class="content">
     <div class="header">
-        <h2>Активация прошла успешно</h2>
+        <h3>Активация прошла успешно</h3>
     </div>
-    <div class="row-fluid">
-        <div class="span12 activation-block">
-            <a href="/login" class="btn btn-success btn-large">Перейти к авторизиации</a>
-            <place>Content</place>
+    <div class="page-content">
+        <div class="row-fluid">
+            <div class="span12 activation-block">
+                <a href="/login" class="btn btn-success btn-large">Перейти к авторизиации</a>
+                <place>Content</place>
+            </div>
         </div>
     </div>
 </div>
