--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -9,8 +9,7 @@
     <div class="control-group">
         <label class="control-label" for="Password">Пароль:</label>
         <div class="controls">
-            <input class="span6" id="Password" type="password" name="Password" value="" placeholder="Пароль" required="required"
-                   autofocus="autofocus"/>
+            <input class="span6" id="Password" type="password" name="Password" value="" placeholder="Пароль" required="required" />
             <a class="forgot" href="/forgot">Забыли пароль?</a>
         </div>
     </div>
