--- a/src/Assets/User/Reset/Form.html
+++ b/src/Assets/User/Reset/Form.html
@@ -3,7 +3,7 @@
     <div class="control-group">
         <div class="control-label">EMail</div>
         <div class="controls">
-            <input type="email" name="EMail"/>
+            <input type="email" name="EMail" autofocus required />
         </div>
     </div>
     <div class="form-actions">
