Багфиксы, и объединение Authenticate & Identificate

--- a/src/Assets/Control/UI/Navlist/Passive.html
+++ b/src/Assets/Control/UI/Navlist/Passive.html
@@ -1,6 +1,6 @@
 <li>
     <a href="/control/<k>ID</k>">
     <img src="/img/icons/Control/<k>ID</k>.png" width="16" height="16" class="icon"/>
-        <l><k>ID</k>:Control.Title</l>
+        <l><k>ID</k>.Control:Title</l>
     </a>
 </li>
