--- a/src/Assets/Default/UI/Form/Password/One.html
+++ b/src/Assets/Default/UI/Form/Password/One.html
@@ -1,6 +1,6 @@
 <div class="control-group">
     <label class="control-label" for="<k>ID</k>">
-        <l><k>Label</k></l>
+        <l><k>Label</k></l>:
 
         <if value="<k>Required</k>" eq="required"><span class="required-star">*</span></if>
 
