--- a/src/Assets/Journal/Show/Control.html
+++ b/src/Assets/Journal/Show/Control.html
@@ -3,13 +3,13 @@
         <datetime format="H:i:s d.m.Y"><k>Time</k></datetime>
     </td>
     <td>
-        <a href="/control/Journal/Filter?Service=<k>Service</k>">:<l><k>Service</k>.Service</l></a>
+        <a href="/control/Journal/Filter?Service=<k>Service</k>">:<l><k>Service</k>:Service</l></a>
     </td>
     <td>
-        <a href="/control/Journal/Filter?On=<k>On</k>"><l><k>Service</k>.<k>On</k></l></a>
+        <a href="/control/Journal/Filter?On=<k>On</k>"><l><k>Service</k>:<k>On</k></l></a>
     </td>
     <td>
-        <entity>User:<call>Session.User.ID</call></entity>
+        <entity>User:<k>Session.User.ID</k></entity>
     </td>
     <td><a href="/control/Journal/Show/<k>ID</k>">Посмотреть</a> </td>
 </tr>
