--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -1,4 +1,4 @@
-<form method="post" class="form-horizontal def-form auth" action="/auth">
+<form method="post" class="form-horizontal def-form auth" action="/login">
     <div class="control-group">
         <label class="control-label" for="EMail">E-mail:</label>
         <div class="controls">
