--- a/src/Assets/Session/Show/Control.html
+++ b/src/Assets/Session/Show/Control.html
@@ -15,6 +15,6 @@
         <k>IP.Current</k>
     </td>
     <td><datetime format="H:i:s d.m.Y"><k>Heartbeat</k></datetime></td>
-    <td><a href="/control/Session/Delete/<k>ID</k>"><l>Session:Control.Annulate</l></a> </td>
+    <td><a href="/control/Session/Delete/<k>ID</k>"><l>Session.Control:Annulate</l></a> </td>
 
 </tr>
