--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -1,13 +1,10 @@
 <div class="page-header">
     <h2>Центр управления</h2>
 </div>
-<div class="row-fluid">
-    <div class="span3">
-        <place>Navigation</place>
-    </div>
-    <div class="span9">
-        <h2 class="page-header"><l><call>Bundle</call>:Control.Title</l></h2>
-        <place>Sidebar</place>
-        <place>Content</place>
-    </div>
+<div class="header">
+    <h3><l><call>Bundle</call>.Control:Title</l></h3>
+</div>
+<div class="page-content">
+    <place>Sidebar</place>
+    <place>Content</place>
 </div>
