--- a/src/Assets/Control/UI/Navlist/Header.html
+++ b/src/Assets/Control/UI/Navlist/Header.html
@@ -1,1 +1,1 @@
-<li class="nav-header"><l>Control:Panel.Group.<k>Title</k></l></li>
+<li class="nav-header"><l>Control.Panel:Group.<k>Title</k></l></li>
