Image API prototype. Small markup fixes.

--- a/src/Assets/Default/UI/Form.html
+++ b/src/Assets/Default/UI/Form.html
@@ -1,6 +1,6 @@
 <div class="row-fluid">
     <div class="span12">
-        <form id="form" method="post" class="form-horizontal" action="<k>Action</k>" enctype="multipart/form-data">
+        <form id="form" method="post" class="form-vertical" action="<k>Action</k>" enctype="multipart/form-data">
             <place>Form</place>
 
             <div class="form-actions">
