--- a/src/Assets/Default/UI/Form/Star.html
+++ b/src/Assets/Default/UI/Form/Star.html
@@ -1,1 +1,1 @@
-<input name="<k>Name</k>" type="radio" class="star" value="<k>Num</k>" title="<l><k>Entity</k>.<k>Node</k>.<k>Num</k></l>"  <block>checked="<k>Checked</k>"</block> required="required" data-message="Укажите оценку" />
+<input name="<k>Name</k>" type="radio" class="star" value="<k>Num</k>" title="<l><k>Entity</k>.Entity:<k>Node</k>.<k>Num</k></l>"  <block>checked="<k>Checked</k>"</block> required="required" data-message="Укажите оценку" />
