--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -5,6 +5,13 @@
     <h3><l><call>Bundle</call>.Control:Title</l></h3>
 </div>
 <div class="page-content">
-    <place>Sidebar</place>
-    <place>Content</place>
+    <div class="row-fluid">
+        <div class="span3">
+            <place>Navigation</place>
+        </div>
+        <div class="span9">
+            <place>Sidebar</place>
+            <place>Content</place>
+        </div>
+    </div>
 </div>
