--- a/src/Assets/Default/UI/Form/Stars.html
+++ b/src/Assets/Default/UI/Form/Stars.html
@@ -3,7 +3,7 @@
 <js>jquery.star</js>
 
 <div class="control-group">
-    <label class="control-label"> <l><k>Entity</k>.<k>Node</k>.Label</l> </label>
+    <label class="control-label"> <l><k>Entity</k>.Entity:<k>Node</k>.Label</l> </label>
     <div class="controls">
 <div id="<k>Name</k>" class="stars">
         <k>Stars</k>
