--- a/src/Assets/Default/UI/Form/Textfield.html
+++ b/src/Assets/Default/UI/Form/Textfield.html
@@ -1,12 +1,6 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
     <div class="controls">
-        <input type="<k>Subtype</k>"
-               name="<k>Name</k>"
-               <block>required="<k>Required</k>"</block>
-                class="span4"
-               value="<k>Value</k>"
-               <block>pattern="<k>Regex</k>"</block>
-               <block>placeholder="<k>Placeholder</k>"</block> />
+        <k>HTML</k>
     </div>
 </div>
