--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -1,3 +1,9 @@
+<breadcrumb href="/control">ЦУП</breadcrumb>
+<breadcrumb href="/control/<call>Bundle</call>"><l><call>Bundle</call>.Control:Title</l></breadcrumb>
+
+<subtitle>ЦУП</subtitle>
+<subtitle><l><call>Bundle</call>.Control:Title</l></subtitle>
+
 <div class="page-header">
     <h2>Центр управления</h2>
 </div>
