--- a/src/Assets/Default/UI/Form/Radio.html
+++ b/src/Assets/Default/UI/Form/Radio.html
@@ -1,4 +1,4 @@
 <label class="radio">
     <input type="radio" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>" <block>checked="<k>Checked</k>"</block>>
-    <k>Value</k>
+    <l><k>Entity</k>.Entity:<k>Node</k>.<k>Value</k></l>
 </label>
