--- a/src/Assets/Default/UI/Form/Radiogroup.html
+++ b/src/Assets/Default/UI/Form/Radiogroup.html
@@ -1,5 +1,5 @@
 <div class="control-group">
-    <label class="control-label"><l><k>Entity</k>.<k>Name</k>.Label</l></label>
+    <label class="control-label"><l><k>Label</k>.Label</l></label>
 
     <div class="controls">
         <k>Radios</k>
