--- a/src/Assets/User/Show/Full.html
+++ b/src/Assets/User/Show/Full.html
@@ -1,101 +1,1 @@
-<css>User</css>
-<div class="row-fluid">
-    <div class="span9">
-        <div class="user-block">
-        <div class="user-header"> <k>Fullname</k></div>
-
-        <div class="vcard">
-            <div class="row-fluid">
-            <div class="span3">
-                        <a href="/user/<k>Slug</k>">
-                            <thumb>
-                                <URL>Public/uploads/photos/<k>Photo</k></URL>
-                                <Width>200</Width>
-                                <Template>Photo</Template>
-                                <Default>Assets/User/img/nophoto.jpg</Default>
-                                <Alt><k>Name</k></Alt>
-                            </thumb>
-                        </a>
-
-            </div>
-            <div class="span6">
-                <div class="spaced">
-                    <h6>Город</h6>
-                    <entity>City:<k>City</k></entity>
-                </div>
-
-                <block>
-                    <h6>О себе</h6>
-                    <k>Notes</k>
-                </block>
-
-
-            </div>
-            <div class="span3 ">
-                <div class="block">
-                    <h6>Рейтинг</h6>
-                    <div class="position">
-                            <div class="positionRow">
-                                <k>Position</k> место
-                            </div>
-                            из 200 в рейтинге пользователей
-
-                            <div class="positionRow">
-                                <k>Reviews</k>
-                            </div>
-                            отзывов написано
-
-                            <div class="positionRow">
-                                <k>Rating</k>
-                            </div>
-                            суммарная оценка
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-        <hr/>
-    <div class="tabbable">
-      <ul class="nav nav-tabs">
-        <li class="active"><a href="#reviews" class="header3" data-toggle="tab">Отзывы <sup><k>Count</k></sup></a></li>
-      </ul>
-      <div class="tab-content">
-        <div class="tab-pane active" id="reviews">
-            <exec>
-            <Service>Entity.List</Service>
-            <Method>Do</Method>
-            <Call>
-                <Entity>Review</Entity>
-                <Where>
-                    <User><k>ID</k></User>
-                </Where>
-                <Template>User</Template>
-            </Call>
-            </exec>
-        </div>
-      </div>
-    </div>
-    </div>
-    <div class="span3">
-            <div class="spaced">
-                <h6>Достижения</h6>
-                <div class="achievement">
-                    <img class="pull-left icon" src="/images/achievements/10.png" />
-                    <div class="title">новичок</div>
-                    Написал 10 отзывов
-
-                </div>
-                <div class="achievement">
-                    <img class="pull-left icon" src="/images/achievements/50.png" />
-                    <div class="title">герой</div>
-                    Получил 50 плюсов
-                </div>
-                <div class="achievement">
-                    <img class="pull-left icon" src="/images/achievements/502.png" />
-                    <div class="title">знаток докторов</div>
-                    Написал 50 отзывов к докторам
-                </div>
-            </div>
-    </div>
-</div>
+<h1><k>Fullname</k></h1>
