--- a/src/Assets/Default/Main.html
+++ b/src/Assets/Default/Main.html
@@ -8,8 +8,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Codeine Site</title>
-    <meta name="description" content="Codeine Site">
+    <title><call>Project.Title</call></title>
+    <description/>
+
     <meta name="author" content="">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
