--- a/src/Assets/Default/UI/Form/Checkbox.html
+++ b/src/Assets/Default/UI/Form/Checkbox.html
@@ -1,6 +1,6 @@
 <div class="control-group">
   <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> </label>
   <div class="controls">
-    <input type="checkbox" name="<k>Name</k>" value="<k>TrueValue</k>" <block>checked="<k>Checked</k>"</block>/>
+    <input id="<k>ID</k>" type="checkbox" name="<k>Name</k>" value="<k>TrueValue</k>" <block>checked="<k>Checked</k>"</block>/>
   </div>
 </div>
