--- a/src/Assets/Session/Control/Do.html
+++ b/src/Assets/Session/Control/Do.html
@@ -1,5 +1,6 @@
 <table class="table table-condensed table-striped">
     <tr>
+        <th><l>Session.Entity:ID</l></th>
         <th><l>Session.Entity:Created</l></th>
         <th><l>Session.Entity:User</l></th>
         <th><l>Session.Entity:Expire</l></th>
