--- a/src/Assets/User/Show/Control.html
+++ b/src/Assets/User/Show/Control.html
@@ -1,4 +1,14 @@
-<tr class="user_row_status_<k>Status</k>">
-    <td class="span2"><a href="/user/<k>ID</k>"><k>EMail</k> </a></td>
-    <td class="span2"><datetime><k>Created</k></datetime></td>
-</tr>
+<tr><td><a href="/control/<call>Entity</call>/Show/<k>ID</k>"><k>Fullname</k></a>
+<div class="pull-right">
+            <div class="btn-group">
+                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                    Действия
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="/control/<call>Entity</call>/Update/<k>ID</k>">Редактировать</a></li>
+                    <li><a href="/control/<call>Entity</call>/Delete/<k>ID</k>">Удалить</a></li>
+                </ul>
+            </div>
+        </div>
+</td></tr>
