--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -14,9 +14,8 @@
         </div>
     </div>
     <div class="control-group">
-        <label class="control-label" for="TTL">Запомнить:</label>
         <div class="controls">
-            <input type="checkbox" name="Remember" id="TTL" value="Long">
+            <label class="checkbox" for="TTL"><input type="checkbox" name="Remember" id="TTL" value="Long"> Запомнить меня</label>
         </div>
     </div>
     <div class="form-actions">
